--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 <head>
     <title>Mew York City</title>
@@ -35,10 +36,9 @@
 
         <!--embedded video-->
         <div align="center">
-            <!--<iframe width="1000" height="600"
-            src="https://www.youtube.com/embed/NOD8jdVLHds?si=L6ro-kQyzeLqNnX5" >
-            </iframe>-->
-            <p><h4>coming soon</h4></p>
+            <iframe width="1000" height="600"
+            src="https://www.youtube.com/embed/g3dmySxGefw?si=cuqsBiRNvAvtmZA0">
+            </iframe>
         </div>
     </div>
 
